force-app/main/default/objects/DD_Group__c/DD_Group__c.object-meta.xml
<CustomObject>
    <label>Group</label>
    <pluralLabel>Groups</pluralLabel>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Employer group record created when a quote is accepted and a policy is bound.</description>
</CustomObject>