force-app/main/default/objects/DD_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
</CustomField>