force-app/main/default/objects/DD_Group__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <label>Group Number</label>
    <type>AutoNumber</type>
    <startingNumber>1000</startingNumber>
    <displayFormat>GRP-{0000}</displayFormat>
    <externalId>true</externalId>
</CustomField>