force-app/main/default/objects/DD_Group__c/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <label>Group Size</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>