force-app/main/default/objects/DD_Group__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Small Business</fullName><default>true</default><label>Small Business</label></value>
            <value><fullName>Individual</fullName><default>false</default><label>Individual</label></value>
            <value><fullName>Mid-Market</fullName><default>false</default><label>Mid-Market</label></value>
            <value><fullName>Large Group</fullName><default>false</default><label>Large Group</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>