force-app/main/default/objects/DD_Group__c/fields/Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium__c</fullName>
    <label>Monthly Premium</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>