force-app/main/default/objects/DD_Group__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
</CustomField>