force-app/main/default/objects/DD_Group__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>DD_Policy__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
</CustomField>