force-app/main/default/objects/DD_Group__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <type>Text</type>
    <length>10</length>
</CustomField>